file traversal and deletion

--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -16,12 +16,16 @@
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              boxes_path, :class => 'btn'  %>
+              user_boxes_path(params[:user_id]), :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_box_path(@box), :class => 'btn' %>
+              edit_user_box_path(params[:user_id],@box), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              box_path(@box),
+              user_box_path(params[:user_id], @box),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
 </div>
+<% if @box.kind == 'folder' then %>
+  <%= render 'navbar' %>
+  <%= render 'view' %>
+<% end %>
