--- a/app/views/boxes/_form.html.erb
+++ b/app/views/boxes/_form.html.erb
@@ -27,6 +27,6 @@
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                boxes_path, :class => 'btn' %>
+                user_boxes_path(params[:user_id]), :class => 'btn' %>
   </div>
 <% end %>
