--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
   <div class="row">
       <div class="span6">
         <h1>Register</h1>
-        <p>Register here</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
         <p><%= link_to 'Register',new_user_path,:class=>'btn btn-large' %></p>
       </div>
       <div class="span5">
