--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,10 +1,20 @@
-<p>
-	<% if @user.errors.count != 0 then %>
-		Something wrong with user login
-	<% else %>
-		Login successful
-	<% end %>
-</p>
-<p>
-	Login as user <%= params[:user] %> with password <%= params[:pass] %>
-</p>
+<% if @user.errors.count != 0 then %>
+  <div class="alert alert-error">
+    <h4>Error</h4>
+    <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% else %>
+  <div class="alert alert-success">
+    <h4>Login successful</h4>
+    Going to your boxes site
+  </div>
+<% end %>
+<div class="span5 offset6">
+  <% if @user.errors.count != 0 then %>
+    <%= render "users/loginBox" %>
+  <% end %>
+</div>
