--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -18,14 +18,16 @@
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_user_box_path(params[:user_id],@box), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              user_box_path(params[:user_id], @box),
+              @box.kind == 'root' ? 'javascript:voild(0)' : user_box_path(params[:user_id], @box),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+              :class => 'btn btn-danger'+ (@box.kind == 'root' ? ' disabled' : '') %>
 </div>
-<% if @box.kind == 'folder' then %>
+<% if @box.kind == 'folder' || @box.kind == 'root' then %>
   <%= render 'navbar' %>
   <%= render 'view' %>
 <% else %>
-  <p>Show contents of the file </p>
+  <div class="well well-large">
+    <%= render :file => Rails.root.to_s + '/public' + @box.avatar.url %>
+  </div>
 <% end %>
