--- a/app/views/boxes/upload.html.erb
+++ b/app/views/boxes/upload.html.erb
@@ -1,1 +1,7 @@
-Upload file here
+<div class="span9">
+  <%= form_tag user_box_sendfiles_path(params[:user_id], params[:box_id]), 
+    :method=> :post, :multipart => true do %>
+  <%= file_field_tag 'file' %>
+  <%= submit_tag 'Upload' %>  
+  <% end %>
+</div>
