--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,18 @@
           </a>
           <%= link_to 'Kakau',root_path,:class=>'brand' %>
           <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-            </ul>
+            <% if !session[:username].nil? then %>
+              <ul class="nav pull-right">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= session[:username] %> <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to 'Profile',user_path(session[:username]) %></li>
+                    <li class="divider"></li>
+                    <li><%= link_to 'Logout', user_logout_path(session[:username]) %></li>
+                  </ul>
+                </li>
+              </ul>
+            <% end %>
           </div><!--/.nav-collapse -->
         </div>
       </div>
