--- a/app/views/users/_loginBox.html.erb
+++ b/app/views/users/_loginBox.html.erb
@@ -2,17 +2,26 @@
 <p>
   <%= form_tag user_login_path('dologin') do %>
     <div class="control-group">
-    <%= label_tag 'username_label', 'Username:' %> 
-    <%= text_field_tag 'user' %> 
+      <%= label_tag 'username_label', 'Username:', :class => 'control-label' %> 
+      <div class="controls">
+        <div class="input-prepend">
+          <span class="add-on"><i class="icon-user"></i></span>
+          <%= text_field_tag 'user' %> 
+        </div>
+      </div>
     </div>
     <div class="control-group">
-    <%= label_tag 'password_label', 'Password:' %>
-    <%= password_field_tag 'pass' %>
+      <%= label_tag 'password_label', 'Password:' %>
+      <div class="controls">
+        <div class="input-prepend">
+          <span class="add-on"><i class="icon-star"></i></span>
+          <%= password_field_tag 'pass' %>
+        </div>
+      </div>
     </div>
     <div class="control-group">
       <%= label_tag 'remember',(check_box_tag 'remember')+' Remember Me' %>
     </div>
-    <br />
     <%= submit_tag 'Login',:class=>'btn' %>
   <% end %>
 </p>
