--- a/app/views/boxes/_form.html.erb
+++ b/app/views/boxes/_form.html.erb
@@ -1,26 +1,9 @@
-<%= form_for @box, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for @box, :url => user_box_path(params[:user_id], params[:id]), 
+    :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :kind, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :kind, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :user_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :user_id, :class => 'number_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :parent, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :parent, :class => 'number_field' %>
     </div>
   </div>
 
