--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,13 @@
+<% if @user.errors.count != 0 then %>
+  <div class="alert alert-error">
+    <h4>Error</h4>
+    <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 <%= form_tag users_path,:method => :post, :class => 'form-horizontal' do %>
   <div class="control-group">
     <%= label_tag 'Username', nil, :class=>'control-label' %>
