--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,14 +46,14 @@
           </a>
           <%= link_to 'Kakau',root_path,:class=>'brand' %>
           <div class="container-fluid nav-collapse">
-            <% if !session[:username].nil? then %>
+            <% if user_signed_in? then %>
               <ul class="nav pull-right">
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= session[:username] %> <b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %> <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><%= link_to 'Profile',user_path(session[:username]) %></li>
+                    <li><%= link_to 'Profile',user_path(current_user.username) %></li>
                     <li class="divider"></li>
-                    <li><%= link_to 'Logout', user_logout_path(session[:username]) %></li>
+                    <li><%= link_to 'Logout', destroy_user_session_path,:method => :delete %></li>
                   </ul>
                 </li>
               </ul>
