--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="span5">
         <% if user_signed_in? then %>
-          Welcome <%= current_user.email %>
+          <h1><Welcome <%= current_user.username %></h1>
           <%= link_to 'Logout', destroy_user_session_path, :class=>'btn btn-large',:method=>:delete%>
         <% else %>
           <%= link_to 'Login', new_user_session_path, :class=>'btn btn-large' %>
